cluster/gitops/storage/openebs/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openebs
specs:
  - description: openebs-zfs-controller
    endpointSelector:
      matchLabels:
        name: openebs-zfs-controller
    egress:
      # Access to k8s API for CSI components
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
